--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,16 @@
   "name": "Groceries",
   "icons": [
     {
-      "src": "/images/icon-512.png",
+      "src": "/groceries/images/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/images/icon-192.png",
+      "src": "/groceries/images/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
   ],
-  "start_url": "/",
+  "start_url": "/groceries",
   "display": "standalone"
 }
